# restabot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/restabot/: model.py  ocr.py  pipeline.py  screenshot.py  slack_upload.py  summary.py  util.py
src/restabot/task/: ocr.py  screenshot.py  slack_download.py  slack_upload.py  summary.py
tests/: test_util.py
