[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restabot"
version = "1.0.3"
description = "Restaurant menu bot"
authors = [
    { name = "Hufnagel Istvan", email = "pista@fnagel.hu" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp~=3.13",
    "google-genai~=1.50",
    "pillow~=12.0",
    "playwright~=1.56",
    "PyYAML~=6.0",
    "pydantic~=2.12",
    "python-dotenv~=1.2",
    "slack-sdk~=3.38"
]

[project.optional-dependencies]
dev = [
    "flake8~=7.3",
    "flake8-pyproject~=1.2",
    "pytest~=9.0",
    "pytest-asyncio~=1.3"
]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.flake8]
max-line-length = 120
import-order-style = "edited"
min_python_version = "3.10.0"
extend-ignore = ["W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
